# agent-os

./: README.md  SKILL_REGISTRY.md  mcp-server-config.skill
contracts/cost-governor/: .gitignore  pyproject.toml
contracts/cost-governor/examples/: tier1-free.local.json  tier2-minimal.cloud.json  tier3-balanced.openrouter.json  tier4-pro.anthropic.json  tier5-enterprise.autonomous.json
contracts/cost-governor/policy/: README.md  model.conf  policy.csv
contracts/cost-governor/runtime_validator/: __init__.py  decision.py  policy_index.py  types.py  validator.py
contracts/cost-governor/schemas/: openclaw.cost_governor.schema.json
contracts/cost-governor/tests/: conftest.py  fixtures.py  test_config_hygiene.py  test_decision_logic.py  test_policy_as_code.py  test_runtime_invariants.py  test_schema_validation.py
contracts/cost-governor/tools/: test.sh
contracts/health/: README.md  pyproject.toml
contracts/health/examples/: example-invalid-missing-required.json  example-minimal.json  example-with-degraded.json
contracts/health/runtime_validator/: __init__.py  types.py  validator.py
contracts/health/schemas/: openclaw.health_status.schema.json
contracts/health/tests/: __init__.py  conftest.py  fixtures.py  test_hygiene.py  test_runtime_invariants.py  test_schema_validation.py
contracts/logging/: README.md  pyproject.toml
contracts/logging/examples/: example-invalid-missing-required.json  example-minimal.json  example-with-decision.json  example-with-tokens-and-cost.json
contracts/logging/runtime_validator/: __init__.py  types.py  validator.py
contracts/logging/schemas/: openclaw.log_event.schema.json
contracts/logging/tests/: conftest.py  fixtures.py  test_cross_contract_integration.py  (+3 more)
(+37 files in other folders)
