[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logging-contract"
version = "0.1.0"
description = "Logging contract: schema validation and runtime invariants."
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime_validator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
